<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitePrimary"
    tools:context=".Splash"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_logo_content_desc"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        />

    <TextView
        android:id="@+id/PhotoEditorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/icon"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp"
        android:layout_marginTop="30dp"
        android:text="@string/Photo_Text"
        android:textColor="@color/blue_color_picker"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/PhotoEditorText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="95dp"
        android:layout_alignParentBottom="true"
        android:text="@string/loading"
        android:textSize="25dp"
        android:textColor="@color/blue_color_picker" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_alignBottom="@+id/load"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:indeterminate="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp" />

</RelativeLayout>