<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitePrimary"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:id="@+id/EYO">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Edit your Own"
        android:gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:textSize="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Choose your photo"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/C_G"
        android:layout_below="@+id/EYO"
        android:gravity="center_horizontal"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/camera_button_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/gallery_button_content_desc"
                android:src="@drawable/cam"/>

            <TextView
                android:id="@+id/camera_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/camera_button_image"
                android:text="@string/camera_button_text"
                android:textColor="@color/blue_color_picker"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <View
            android:id="@+id/view"
            android:layout_width="1dp"
            android:layout_height="150dp"
            android:background="@color/silver"
            />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/gallery_button_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/gallery_button_content_desc"
                android:src="@drawable/gallery" />
            <TextView
                android:id="@+id/gallery_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/gallery_button_image"
                android:text="@string/gallery_button_text"
                android:textColor="@color/blue_color_picker"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

    </LinearLayout>
    <View
        android:layout_below="@+id/C_G"
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/silver"/>

    <LinearLayout
        android:id="@+id/title_home"
        android:layout_below="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Explore More Presets"
                    android:textSize="25sp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Presets"
                    android:layout_marginTop="30dp"
                    />
        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>